--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,13 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--<dependency>-->
-                <!--<groupId>org.glassfish.grizzly</groupId>-->
-                <!--<artifactId>grizzly-bom</artifactId>-->
-                <!--<version>2.3.22</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>org.glassfish.grizzly</groupId>
+                <artifactId>grizzly-bom</artifactId>
+                <version>2.3.22</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
